# miniclaw

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.yaml.example  pyproject.toml
.specify/memory/: constitution.md
docs/architecture/: architecture.md
docs/conventions/: conventions.md
docs/requirements/: PRD-v1.md
docs/tasks/: optimization-plan.md  tasks.md
src/miniclaw/: __init__.py  __main__.py  bootstrap.py  cli.py
src/miniclaw/agent/: __init__.py  context.py  loop.py  model_router.py
src/miniclaw/browser/: __init__.py  playwright_driver.py
src/miniclaw/channels/: __init__.py  base.py  cli_channel.py
src/miniclaw/config/: __init__.py  settings.py  wizard.py
src/miniclaw/desktop/: __init__.py  base.py  factory.py  macos.py
src/miniclaw/gateway/: __init__.py  router.py  session.py
src/miniclaw/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  registry.py
src/miniclaw/memory/: __init__.py  long_term.py  short_term.py
src/miniclaw/skills/: __init__.py  loader.py  matcher.py
src/miniclaw/skills/builtin/browser-research/: SKILL.md
src/miniclaw/skills/builtin/coder/: SKILL.md
src/miniclaw/skills/builtin/desktop-assistant/: SKILL.md
src/miniclaw/skills/builtin/github/: SKILL.md
src/miniclaw/skills/builtin/shell/: SKILL.md
src/miniclaw/tools/: __init__.py  executor.py  registry.py
src/miniclaw/tools/builtin/: __init__.py  browser.py  desktop.py  file.py  shell.py  web.py
src/miniclaw/utils/: __init__.py  logging.py  tokens.py
tests/: conftest.py  test_cli.py  test_config.py  test_init.py
tests/test_agent/: test_context.py  test_loop.py  test_model_router.py
tests/test_browser/: test_browser_tools.py  test_playwright_driver.py
tests/test_desktop/: test_base.py  test_desktop_tools.py  test_factory.py  test_macos.py
tests/test_gateway/: test_gateway.py  test_session.py
tests/test_llm/: test_anthropic_provider.py  test_base.py  test_openai_provider.py  test_registry.py
tests/test_memory/: test_long_term.py  test_short_term.py
tests/test_skills/: test_loader.py  test_matcher.py
tests/test_tools/: test_executor.py  test_file_tool.py  test_registry.py
tests/test_utils/: test_logging.py  test_tokens.py
