[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniclaw"
version = "0.1.0"
description = "🦞 你的 Mac 上的 AI 操控者 — 一句话让 AI 操控你的电脑"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "avinzhang" },
]
keywords = ["ai", "agent", "computer-use", "automation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "pyautogui>=0.9",
    "Pillow>=10.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
miniclaw = "miniclaw.cli:main"

[project.urls]
Homepage = "https://github.com/avinzhang/miniclaw"
Repository = "https://github.com/avinzhang/miniclaw"

# ============================================================
# Ruff 配置（PRD §5.4 / conventions.md §9.2）
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["miniclaw"]

# ============================================================
# MyPy 配置（PRD §5.4）
# ============================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "pyautogui.*",
    "playwright.*",
    "prompt_toolkit.*",
]
ignore_missing_imports = true

# ============================================================
# Pytest 配置
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_functions = "test_*"

# ============================================================
# Hatch 构建配置
# ============================================================
[tool.hatch.build.targets.wheel]
packages = ["src/miniclaw"]
